# entregable_modulo_iii

./: Dockerfile  README.md  docker-compose.yml
app/: Dockerfile  main.py
data/: test_utils.csv
server/: Dockerfile  main.py  requirements.txt
server/classifier/: classifier.py
server/models/: models.py
server/test/unit/: test_unit.py
train/: ENTREGABLE_MODULO_III\server\models\model_titanic.joblib  pyproject.toml  requirements.txt
train/src_train/: utils.py
train/test/: test_integration.py
utils/: pyproject.toml  requirements.txt  tox.ini
utils/src_utils/: pyproject.toml
utils/test/integration/: test_integration.py
