[tool.poetry]
name = "src-train"
version = "0.1.0"
description = "utils for train and save the model"
authors = ["ValHdez"]
license = "MIT"
readme = "README.md"
packages = [{include = "src_train"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
